tekton/route-cd-deploytotest.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: cd-deploytotest
  name: el-cd-deploytotest
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-cd-deploytotest
    weight: 100
